--- a/CoreLocationCLI.xcodeproj/xcshareddata/xcschemes/CoreLocationCLI.xcscheme
+++ b/CoreLocationCLI.xcodeproj/xcshareddata/xcschemes/CoreLocationCLI.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0800"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D97136FB1C38867000BA5442"
-               BuildableName = "CoreLocationCLI.temp_caseinsensitive_rename"
+               BuildableName = "CoreLocationCLI"
                BlueprintName = "CoreLocationCLI"
                ReferencedContainer = "container:CoreLocationCLI.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D97136FB1C38867000BA5442"
-            BuildableName = "CoreLocationCLI.temp_caseinsensitive_rename"
+            BuildableName = "CoreLocationCLI"
             BlueprintName = "CoreLocationCLI"
             ReferencedContainer = "container:CoreLocationCLI.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D97136FB1C38867000BA5442"
-            BuildableName = "CoreLocationCLI.temp_caseinsensitive_rename"
+            BuildableName = "CoreLocationCLI"
             BlueprintName = "CoreLocationCLI"
             ReferencedContainer = "container:CoreLocationCLI.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D97136FB1C38867000BA5442"
-            BuildableName = "CoreLocationCLI.temp_caseinsensitive_rename"
+            BuildableName = "CoreLocationCLI"
             BlueprintName = "CoreLocationCLI"
             ReferencedContainer = "container:CoreLocationCLI.xcodeproj">
          </BuildableReference>
